kubernetes/apps/external/cloudflare-tunnel/templates/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: cloudflare-tunnel
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: cloudflare-tunnel
    egress:
      # https://developers.cloudflare.com/cloudflare-one/connections/connect-networks/configure-tunnels/tunnel-with-firewall/
      - toFQDNs:
          - matchName: region1.v2.argotunnel.com
          - matchName: region2.v2.argotunnel.com
        toPorts:
          - ports:
              - port: "7844"
